--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "babel-plugin-istanbul": "5.1.1",
     "babel-traverse": "6.26.0",
     "chai": "4.2.0",
+    "codecov": "3.1.0",
     "clean-webpack-plugin": "^2.0.1",
     "copy-webpack-plugin": "5.0.2",
     "cross-env": "5.2.0",
