--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "@babel/core": "7.4.0",
     "@babel/preset-env": "7.4.2",
     "@vue/cli-plugin-babel": "3.5.3",
-    "@vue/cli-plugin-e2e-nightwatch": "3.5.1",
+    "@vue/cli-plugin-e2e-nightwatch": "^3.7.0",
     "@vue/cli-plugin-eslint": "3.5.1",
     "@vue/cli-plugin-pwa": "3.5.1",
     "@vue/cli-plugin-unit-mocha": "3.5.1",
@@ -45,18 +45,18 @@
     "babel-plugin-istanbul": "5.1.1",
     "babel-traverse": "6.26.0",
     "chai": "4.2.0",
-    "codecov": "3.1.0",
     "clean-webpack-plugin": "^2.0.1",
+    "codecov": "3.1.0",
     "copy-webpack-plugin": "5.0.2",
     "cross-env": "5.2.0",
     "cross-fetch": "3.0.2",
     "eslint": "5.15.3",
     "eslint-plugin-vue": "5.2.2",
-    "geckodriver": "1.16.0",
+    "geckodriver": "^1.16.2",
     "lint-staged": "8.1.5",
     "nightwatch-vrt": "0.2.10",
     "nightwatch_testrail": "1.0.647",
-    "node-sass": "^4.9.4",
+    "node-sass": "^4.12.0",
     "nyc": "13.3.0",
     "rimraf": "^2.6.2",
     "sass-loader": "^7.1.0",
