--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "vuex-persist": "2.0.0",
     "vue-template-compiler": "^2.5.19",
     "register-service-worker": "1.6.2",
-    "string-replace-loader": "2.1.1"
+    "string-replace-loader": "2.1.1",
+    "nativescript-orientation": "2.2.1"
   },
   "devDependencies": {
     "@babel/core": "7.4.0",
