--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "@babel/core": "7.4.0",
     "@babel/preset-env": "7.4.2",
     "@vue/cli-plugin-babel": "3.5.3",
-    "@vue/cli-plugin-e2e-nightwatch": "3.5.1",
+    "@vue/cli-plugin-e2e-nightwatch": "^3.7.0",
     "@vue/cli-plugin-eslint": "3.5.1",
     "@vue/cli-plugin-pwa": "3.5.1",
     "@vue/cli-plugin-unit-mocha": "3.5.1",
@@ -42,7 +42,7 @@
     "@vue/eslint-config-prettier": "4.0.1",
     "@vue/test-utils": "1.0.0-beta.29",
     "allure-js-commons": "1.3.2",
-    "appium": "1.12.1",
+    "appium": "^1.13.0",
     "appium-doctor": "1.9.0",
     "babel-eslint": "10.0.1",
     "babel-loader": "8.0.5",
@@ -57,7 +57,7 @@
     "cross-fetch": "3.0.2",
     "eslint": "5.15.3",
     "eslint-plugin-vue": "5.2.2",
-    "geckodriver": "1.16.0",
+    "geckodriver": "^1.16.2",
     "jsdom": "15.0.0",
     "jsdom-global": "3.0.2",
     "lint-staged": "8.1.5",
