--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "jsdom": "15.0.0",
     "jsdom-global": "3.0.2",
     "lint-staged": "8.1.5",
+    "nativescript-vue": "2.2.2",
     "nightwatch-vrt": "0.2.10",
     "nightwatch_testrail": "1.0.627",
     "node-sass": "^4.9.4",
@@ -68,6 +69,7 @@
     "rimraf": "^2.6.2",
     "sass-loader": "^7.1.0",
     "sinon": "7.3.1",
+    "tns-core-modules": "5.4.3",
     "vue-template-compiler": "2.6.10",
     "vuepress": "^0.14.11"
   },
