--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "vue-cli-service test:unit --require tests/unit/pre-setup.js",
     "docs:dev": "vuepress dev docs",
     "docs:build": "vuepress build docs",
-    "test:e2e": "vue-cli-service test:e2e --config nightwatch.config.js --env chrome,firefox",
+    "test:e2e": "vue-cli-service test:e2e --config nightwatch.config.js --env firefox",
     "test:e2e-safari": "vue-cli-service test:e2e --config nightwatch.config.js --env safari",
     "test:e2e-edge": "vue-cli-service test:e2e --config nightwatch.config.js --env edge",
     "test:unit": "vue-cli-service test:unit --require tests/unit/pre-setup.js",
