--- a/package.json
+++ b/package.json
@@ -23,11 +23,10 @@
     "vuelidate": "0.7.4",
     "vuex": "3.1.0",
     "vuex-persist": "2.0.0",
-    "vue-template-compiler": "^2.5.19",
     "register-service-worker": "1.6.2",
     "string-replace-loader": "2.1.1",
     "nativescript-orientation": "2.2.1",
-    "nativescript-ui-sidedrawer": "6.0.0"
+    "nativescript-ui-sidedrawer": "^7.0.0"
   },
   "devDependencies": {
     "@babel/core": "7.4.0",
